

Release 0.5.1 Uneno

   o FEATURE: A "Delete Molecule" button is now available in the
     Display Manager.

   o FEATURE: show-rotamer-dialog is now available from the scripting
     layer (hence `quick rotamer' keybinding).

   o BUG-FIX: the chi angle bond highlighting works again.


-----

Release 0.5 Ueno

   o FEATURE: Coot now has a Preferences dialog.

   o FEATURE: Coot now is PDB version 3.0 compliant.

   o FEATURE: Additional Representations added [Tadeusz Skarzynski].

   o FEATURE: "Fixed Atoms" for refinement have been introduced.

   o FEATURE: Monomer restraints can be edited in a GUI and are
     exported to the scripting layer.

   o FEATURE: Coot can now make difference maps.

   o FEATURE: The state file now remembers the refinement map number
     [Herb Klei].

   o FEATURE: Add dialog position preferences to Extensions.

   o FEATURE: The state file now remembers the scroll-wheel (contour
     changing) map [Kevin Madauss].
   
   o FEATURE: Add a variable reduce-molecule-updates-current, that
     when set by the user causes an update of the probed molecule, not
     the generation of a new one [Bob Nolte].

   o FEATURE: Add Terminal Residue now assigns the correct residue
     type (if a PIR sequence has been given for side-chain docking) 
     [Bob Nolte].

   o FEATURE: "Pukka Puckers?" validation tool for RNA.  Based on
     Davis et al. (2007) Molprobity: all atom contacts and structure
     validation for proteins and nucleic acids, Nucleic Acids
     Research 35, W375-W383.

   o FEATURE: "Active site" hilighting.  Cheap and cheerful solid
     modelling of ligand and neighbouring residues [Herb Klei].

   o FEATURE: Double-clicking on an atom labels it (CCP4mg
     compatibility).

   o FEATURE: "Eigen-flip" function added.  Use to quickly flip around
     ligands.

   o FEATURE: it is now possible to add a setting so that atoms with
     zero occupancy are not moved when refining: